fix(ConsoleInput): String 관련 메서드 수정